# crosslearner

./: .buildinfo  AGENTS.md  CHANGELOG.md  Prompt.txt  README.md  active_counterfactual_augmentation.html  acx_architecture.html  adaptive_batch_size.html  consistency_regularization.html  contrastive_loss.html  datasets.html  discriminator_augmentation.html  doubly_robust.html  exponential_moving_average.html  feature_matching.html  fitting_acx_model.html  freeze_phi.html  genindex.html  gradient_reversal.html  gradnorm.html  hyperparameter_sweeps.html  index.html  instance_noise.html  label_smoothing.html  mixture_of_experts.html  mmd_regularization.html  objects.inv  optimizer_kwargs.html  py-modindex.html  pyproject.toml  quickstart.html  r1_r2_regularization.html  relativistic_gan.html  representation_disentanglement.html  representation_pretraining.html  requirements.txt  risk_early_stopping.html  search.html  searchindex.js  spectral_norm.html  (+12 more)
_modules/: index.html
_sources/: acx_architecture.rst.txt  adaptive_batch_size.rst.txt  consistency_regularization.rst.txt  datasets.rst.txt  gradnorm.rst.txt  index.rst.txt  instance_noise.rst.txt  label_smoothing.rst.txt  mmd_regularization.rst.txt  optimizer_kwargs.rst.txt  quickstart.rst.txt  relativistic_gan.rst.txt  representation_pretraining.rst.txt  risk_early_stopping.rst.txt  spectral_norm.rst.txt  theory.rst.txt  training_history.rst.txt  uncertainty.rst.txt  usage_examples.rst.txt  warm_start.rst.txt
api/: crosslearner.benchmarks.html  crosslearner.configs.html  crosslearner.datasets.html  crosslearner.evaluation.html  crosslearner.html  modules.html  (+3 more)
(+185 files in other folders)
